--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -11,8 +11,8 @@ hydra:
     chdir: True
 
 # LLM parameters
-model: gpt-3.5-turbo  # LLM model (other options are gpt-4, gpt-4-0613, gpt-3.5-turbo-16k-0613)
-temperature: 0.7
+model: gpt-3.5-turbo  # LLM model (other options include gpt-4-1106-preview, gpt-3.5-turbo-16k-0613)
+temperature: 1
 suffix: GPT  # suffix for generated files (indicates LLM model)
 
 # Main loop parameters
