--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -12,10 +12,10 @@ hydra:
 
 # LLM parameters
 model: gpt-3.5-turbo  # LLM model (other options include gpt-4-1106-preview, gpt-3.5-turbo-16k-0613)
-temperature: 1
+temperature: 0.7  # temperature for chat completion
 suffix: GPT  # suffix for generated files (indicates LLM model)
 
-# Main loop parameters
-iteration: 3 # how many outer iterations to run
-sample: 4 # number of code samples to generate per iteration
-width: 10 # sampling width for an instance
+# Main GA loop parameters
+max_iter: 2 # number of outer loop iterations for GA
+pop_size: 2 # population size for GA
+mutation_rate: 0.2 # mutation rate for GA
