--- a/cfg/problem/tsp_aco.yaml
+++ b/cfg/problem/tsp_aco.yaml
@@ -1,3 +1,3 @@
 problem_name: tsp_aco
-problem_size: 50
-description: The task is to solve Traveling Salesman Problem (TSP) with Ant Colony Optimization. TSP requires finding the shortest path that visits all given nodes and returns to the starting node.
+problem_size: 20
+description: The task is to solve Traveling Salesman Problem (TSP) via stochastic solution sampling. TSP requires finding the shortest path that visits all given nodes and returns to the starting node.
