--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -19,4 +19,4 @@ suffix: GPT  # suffix for generated files (indicates LLM model)
 max_fe: 100 # maximum number of function evaluations
 pop_size: 10 # population size for GA
 mutation_rate: 0.3 # mutation rate for GA
-diversify: True # whether to diversify population
+diversify: False # whether to diversify population
