--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -10,7 +10,7 @@ hydra:
     chdir: True
 
 # LLM parameters
-model: gpt-3.5-turbo  # LLM model (other options include gpt-4-1106-preview, gpt-3.5-turbo-16k-0613)
+model: gpt-3.5-turbo-0613  # LLM model (other options include gpt-4-1106-preview)
 # model: gpt-4-1106-preview
 temperature: 1.1  # temperature for chat completion
 suffix: GPT  # suffix for generated files (indicates LLM model)
