Add tsp_cons; add external knowledge

--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -15,3 +15,4 @@ suffix: GPT  # suffix for generated files (indicates LLM model)
 # Main GA loop parameters
 max_fe: 100 # maximum number of function evaluations
 pop_size: 10 # population size for GA
+mutation_rate: 0.5 # mutation rate for GA
