--- a/cfg/problem/tsp_aco.yaml
+++ b/cfg/problem/tsp_aco.yaml
@@ -1,4 +1,5 @@
 problem_name: tsp_aco
 problem_type: aco
-problem_size: 20 # problem size for validation
-description: Solving Traveling Salesman Problem (TSP) via stochastic solution sampling. TSP requires finding the shortest path that visits all given nodes and returns to the starting node.
+problem_size: 50 # problem size for validation
+func_name: heuristics
+description: Solving Traveling Salesman Problem (TSP) via stochastic solution sampling following "heuristics". TSP requires finding the shortest path that visits all given nodes and returns to the starting node.
