--- a/cfg/problem/mkp_aco.yaml
+++ b/cfg/problem/mkp_aco.yaml
@@ -1,5 +1,6 @@
 problem_name: mkp_aco
 problem_type: aco
-problem_size: 50 # problem size for validation
+obj_type: max
+problem_size: 100 # problem size for validation
 func_name: heuristics
-description: Solving Multiple Knapsack Problems (MKP) via stochastic solution sampling following "heuristics". In a Multiple Knapsack Problem, you have items with multiple attributes (like weight, size, profit), and you want to select a subset of these items to maximize a specific objective while staying within certain limits for each attribute.
+description: Solving Multiple Knapsack Problems (MKP) through stochastic solution sampling based on "heuristics". MKP involves selecting a subset of items to maximize the total prize collected, subject to multi-dimensional maximum weight constraints.
