--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -11,7 +11,7 @@ hydra:
 algorithm: reevo # another option is "ael"
 
 # LLM parameters
-model: gpt-3.5-turbo-0613  # LLM model (other options include gpt-4-1106-preview, GLM-3-Turbo, GLM-4)
+model: gpt-3.5-turbo  # LLM model (other options include gpt-4-turbo-preview, GLM-3-Turbo, GLM-4)
 temperature: 1  # temperature for chat completion
 suffix: GPT  # suffix for generated files (indicates LLM model)
 
