--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - problem: tsp_constructive
+  - problem: tsp_aco
   - override hydra/output: local
 
 hydra:
@@ -19,3 +19,4 @@ max_fe: 100 # maximum number of function evaluations
 pop_size: 10 # population size for GA
 mutation_rate: 0.5 # mutation rate for GA
 timeout: 20 # timeout for evaluation of a single heuristic
+diversify_init_pop: True # whether to diversify the initial population
