--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -17,6 +17,7 @@ temperature: 1  # temperature for chat completion
 # Main GA loop parameters
 max_fe: 100 # maximum number of function evaluations
 pop_size: 10 # population size for GA
+init_pop_size: 30 # initial population size for GA
 mutation_rate: 0.5 # mutation rate for GA
 timeout: 20 # timeout for evaluation of a single heuristic
 diversify_init_pop: True # whether to diversify the initial population
