--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -11,7 +11,7 @@ hydra:
 algorithm: reevo # another option is "ael"
 
 # LLM parameters
-model: gpt-3.5-turbo  # LLM model (other options include gpt-4-turbo-preview, GLM-3-Turbo, GLM-4)
+model: gpt-3.5-turbo  # LLM model (other options include gpt-4-turbo-preview; GLM-3-Turbo, GLM-4; llama3-70b and others supported by llama api, see https://docs.llama-api.com/quickstart)
 temperature: 1  # temperature for chat completion
 
 # Main GA loop parameters
