--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -8,7 +8,7 @@ hydra:
     chdir: True
 
 # The chosen algorithm
-algorithm: reevo # another option is "ael"
+algorithm: reevo # other options are "eoh", "ael"; some problems may not support "ael"
 
 # LLM parameters
 model: gpt-3.5-turbo  # LLM model (other options include gpt-4-turbo-preview; GLM-3-Turbo, GLM-4; llama3-70b and others supported by llama api, see https://docs.llama-api.com/quickstart)
