--- a/cfg/llm_client/openai.yaml
+++ b/cfg/llm_client/openai.yaml
@@ -1,3 +1,6 @@
 _target_: utils.llm_client.openai.OpenAIClient
-model: gpt-3.5-turbo
-temperature: 1.0
+
+model: gpt-3.5-turbo # LLM model
+temperature: 1.0  # temperature for chat completion
+api_timeout: 10.0 # timeout for the API request, in seconds
+api_key: ${oc.env:OPENAI_API_KEY,null}
