--- a/cfg/llm_client/deepseek.yaml
+++ b/cfg/llm_client/deepseek.yaml
@@ -1,6 +1,6 @@
 _target_: utils.llm_client.openai.OpenAIClient
 
-# Using llama api. See the available models at https://docs.llama-api.com/quickstart#available-models
+# Using deepseek API
 model: deepseek-chat
 temperature: 1.0  # temperature for chat completion
 api_key: ${oc.env:DEEPSEEK_API_KEY,null}
