--- a/docs/config.toml
+++ b/docs/config.toml
@@ -91,6 +91,10 @@ link = "https://github.com/ai4co/reevo"
 icon = { class = "fab fa-github" }
 caption = "Code"
 
+[links.Slack]
+link = "https://join.slack.com/t/rl4co/shared_invite/zt-1ytz2c1v4-0IkQ8NQH4TRXIX8PrRmDhQ"
+icon = { class = "fab fa-slack"}
+
 [teaser]
 content="Give ReEvo 5 minutes, and get a state-of-the-art algorithm in return!"
 
@@ -119,7 +123,7 @@ $ python3 main.py problem=tsp_gls
 """
 description = '''
 <h5>Available problems</h5>
-<ul dir="auto">
+<ul>
 <li>Traveling Salesman Problem (TSP): <code>tsp_aco</code>, <code>tsp_aco_black_box</code>, <code>tsp_constructive</code>, <code>tsp_gls</code>, <code>tsp_pomo</code>, <code>tsp_lehd</code></li>
 <li>Capacitated Vehicle Routing Problem (CVRP): <code>cvrp_aco</code>, <code>cvrp_aco_black_box</code>, <code>cvrp_pomo</code>, <code>cvrp_lehd</code></li>
 <li>Bin Packing Problem (BPP): <code>bpp_offline_aco</code>, <code>bpp_offline_aco_black_box</code>, <code>bpp_online</code></li>
@@ -138,7 +142,7 @@ $ python3 main.py llm_client=llama_api llm_client.model=gemma2-9b
 
 """
 description = '''<h5>Available LLM service providers</h5>
-<ul dir="auto">
+<ul>
 <li><a href="https://openai.com/api/" rel="nofollow" target="_blank"><b>OpenAI</b></a>: gpt-3.5-turbo (default), gpt-4o, gpt-4o-mini, gpt-4-turbo, etc.</li>
 <li><a href="https://open.bigmodel.cn/" rel="nofollow" target="_blank"><b>Zhipu AI</b></a>: GLM-3-Turbo, GLM-4-Air, GLM-4-0520, etc. (<a href="https://open.bigmodel.cn/dev/howuse/model" rel="nofollow" target="_blank">full list</a>)</li>
 <li><a href="https://www.deepseek.com/" rel="nofollow" target="_blank"><b>DeepSeek</b></a>: deepseek-chat</li>
@@ -160,9 +164,18 @@ biblatex = '''@inproceedings{ye2024reevo,
 }'''
 copy_button = true
 
+[news]
+contents=[
+    {date="Sep. 2024", content="<em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> has been accepted at NeurIPS 2024 🥳"},
+    {date="May 2024", content="We release a new paper version"},
+    {date="Apr. 2024", content="Novel use cases for Neural Combinatorial Optimization (NCO) and Electronic Design Automation (EDA)"},
+    {date="Feb. 2024", content="We are excited to release <em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> 🚀"},
+]
+
 [page]
 enable_katex = false
 enable_code_highlight = true
+tracking={type="umami", website_id="c18ebe0b-2d3c-48ff-9cef-62c34bbadb04"}
 
 [static_file.reevo_img]
 src = "../assets/reevo.jpg"
