--- a/docs/config.toml
+++ b/docs/config.toml
@@ -93,13 +93,13 @@ caption = "Code"
 
 [links.Slack]
 link = "https://join.slack.com/t/rl4co/shared_invite/zt-1ytz2c1v4-0IkQ8NQH4TRXIX8PrRmDhQ"
-icon = { class = "fab fa-slack"}
+icon = { class = "fab fa-slack" }
 
 [teaser]
-content="Give ReEvo 5 minutes, and get a state-of-the-art algorithm in return!"
+content = "Give ReEvo 5 minutes, and get a state-of-the-art algorithm in return!"
 
 [[carousel]]
-image = "static/images/reevo.jpg"
+image = "static/images/reevo.png"
 description = '<span style="font-family:monospace">ReEvo</span> pipeline.'
 
 [[carousel]]
@@ -165,21 +165,25 @@ biblatex = '''@inproceedings{ye2024reevo,
 copy_button = true
 
 [news]
-contents=[
-    {date="Sep. 2024", content="<em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> has been accepted at NeurIPS 2024 🥳"},
-    {date="May 2024", content="We release a new paper version"},
-    {date="Apr. 2024", content="Novel use cases for Neural Combinatorial Optimization (NCO) and Electronic Design Automation (EDA)"},
-    {date="Feb. 2024", content="We are excited to release <em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> 🚀"},
+contents = [
+    { date = "Sep. 2024", content = "<em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> has been accepted at NeurIPS 2024 🥳" },
+    { date = "May 2024", content = "We release a new paper version" },
+    { date = "Apr. 2024", content = "Novel use cases for Neural Combinatorial Optimization (NCO) and Electronic Design Automation (EDA)" },
+    { date = "Feb. 2024", content = "We are excited to release <em>ReEvo: Large Language Models as Hyper-Heuristics with Reflective Evolution</em> 🚀" },
 ]
 
 [page]
 enable_katex = false
 enable_code_highlight = true
-tracking={type="umami", website_id="c18ebe0b-2d3c-48ff-9cef-62c34bbadb04"}
+tracking = { type = "umami", website_id = "c18ebe0b-2d3c-48ff-9cef-62c34bbadb04" }
 
 [static_file.reevo_img]
-src = "../assets/reevo.jpg"
-dest = "static/images/reevo.jpg"
+src = "../assets/reevo.png"
+dest = "static/images/reevo.png"
+
+[static_file.show_reflec]
+src = "../assets/show_reflec.png"
+dest = "static/images/show_reflec.png"
 
 # [static_file.nojekyll]
 # content=""
