[Docs] support live preview and reload

--- a/docs/config.toml
+++ b/docs/config.toml
@@ -192,3 +192,7 @@ dest = "static/images/show_reflec.png"
 # [static_file.nojekyll]
 # content=""
 # dest=".nojekyll"
+
+[preview_mode]
+enabled = false
+dummy_file_path = ".dummy.html"
