--- a/docs/config.toml
+++ b/docs/config.toml
@@ -189,6 +189,10 @@ dest = "static/images/reevo.png"
 src = "../assets/show_reflec.png"
 dest = "static/images/show_reflec.png"
 
+# [static_file.nojekyll]
+# content=""
+# dest=".nojekyll"
+
 [preview_mode]
 enabled = false
-dummy_file_path = "_dummy.html"
+dummy_file_path = "_modification_check"
