--- a/cfg/config.yaml
+++ b/cfg/config.yaml
@@ -1,7 +1,12 @@
 defaults:
   - _self_
   - problem: tsp_aco
-  - llm_client: openai
+  - llm_client: siliconflow
+  # [Optional] set different clients for operators
+  - llm_client@llm_long_ref: siliconflow
+  - llm_client@llm_short_ref: null
+  - llm_client@llm_crossover: null
+  - llm_client@llm_mutation: null 
   - override hydra/output: local
 
 hydra:
