--- a/cfg/llm_client/siliconflow.yaml
+++ b/cfg/llm_client/siliconflow.yaml
@@ -2,7 +2,7 @@ _target_: utils.llm_client.openai.OpenAIClient
 
 # Using SILICONFLOW API
 # see more models at https://cloud.siliconflow.cn/models
-model: "deepseek-ai/DeepSeek-V3"
+model: deepseek-ai/DeepSeek-V3
 temperature: 1.0
 api_key: ${oc.env:SILICONFLOW_API_KEY,null}
 base_url: https://api.siliconflow.cn/v1
