--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "tqdm>=4.66.3",
     "typing_extensions>=4.9.0",
     "pip>=24.0.1",
+    "hydra-colorlog>=1.2.0",
 ]
 
 [project.optional-dependencies]
